--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
+  "homepage": "http://rrag.github.io/capped-investment-strategy-analysis/",
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
